--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "description": "Lerna monorepo starter",
   "version": "1.0.0",
   "author": "Andrico Karoulla <karoulla.andrico@gmail.com>",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "dependencies": {
     "gatsby": "^1.9.247",
     "gatsby-link": "^1.6.40",
@@ -29,7 +33,9 @@
     "@babel/preset-react": "^7.0.0-rc.1",
     "babel-jest": "^23.4.2",
     "enzyme": "^3.4.1",
-    "enzyme-adapter-react-16": "^1.2.0"
+    "enzyme-adapter-react-16": "^1.2.0",
+    "lerna": "^3.14.1",
+    "prettier": "^1.17.1"
   },
   "repository": {
     "type": "git",
