--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-json": "^1.0.20",
-    "react": "16.4.2",
+    "react": "16.0.0",
     "react-helmet": "^5.2.0",
     "serve": "^10.0.0",
     "styled-components": "^3.3.3"
@@ -26,7 +26,10 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "test": "jest test --config ./json-config.json"
+    "test": "jest test --config ./json-config.json",
+    "run:blog": "lerna run --scope=@lerna-monorepo/blog develop",
+    "run:shop": "lerna run --scope=@lerna-monorepo/shop develop",
+    "run:all": "lerna exec yarn develop"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.0.0-rc.1",
