--- a/package.json
+++ b/package.json
@@ -8,16 +8,8 @@
     "packages/*"
   ],
   "dependencies": {
-    "gatsby": "^1.9.247",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-react-helmet": "^2.0.10",
-    "gatsby-plugin-react-next": "^1.0.11",
-    "gatsby-source-filesystem": "^1.5.39",
-    "gatsby-transformer-json": "^1.0.20",
-    "react": "16.0.0",
-    "react-helmet": "^5.2.0",
-    "serve": "^10.0.0",
-    "styled-components": "^3.3.3"
+    "lerna": "^3.14.1",
+    "react": "16.0.0"
   },
   "keywords": [
     "gatsby"
@@ -32,13 +24,21 @@
     "run:all": "lerna exec yarn develop"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.0.0-rc.1",
-    "@babel/preset-react": "^7.0.0-rc.1",
-    "babel-jest": "^23.4.2",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.0.0",
     "enzyme": "^3.4.1",
     "enzyme-adapter-react-16": "^1.2.0",
-    "lerna": "^3.14.1",
-    "prettier": "^1.17.1"
+    "jest": "^24.8.0",
+    "jest-cli": "^24.8.0",
+    "npm-run-all": "^4.1.3",
+    "prettier": "^1.17.1",
+    "react-router-dom": "^4.3.1"
   },
   "repository": {
     "type": "git",
