--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "test": "jest test --config ./json-config.json",
+    "test": "jest test",
     "run:blog": "lerna run --scope=@lerna-monorepo/blog develop",
     "run:shop": "lerna run --scope=@lerna-monorepo/shop develop",
     "run:all": "lerna exec yarn develop"
