--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,14 @@ cache: yarn
 install:
   - yarn
 
-scripts:
+matrix:
+  include:
+    - name: 'Blog Pipeline'
+      env: PACKAGE_LOCATION=packages/blog
+    - name: 'Shop Pipeline'
+      env: PACKAGE_LOCATION=packages/shop
+
+script:
+  - cd $PACKAGE_LOCATION
   - yarn test
   - yarn build
