--- a/lerna.json
+++ b/lerna.json
@@ -6,5 +6,10 @@
   "publish": {
     "conventionalCommits": true,
     "yes": true
+  },
+  "command": {
+    "version": {
+      "message": "chore(release): publish"
+    }
   }
 }
