chore: add public access for the packages

--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -9,6 +9,9 @@
     "build": "gatsby build",
     "develop": "gatsby develop"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@lerna-monorepo/shared-ui": "^1.0.1",
     "dotenv": "^8.0.0",
