--- a/packages/shared-ui/package.json
+++ b/packages/shared-ui/package.json
@@ -11,5 +11,8 @@
     "react": "16.4.2",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.3.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
