--- a/packages/shop/package.json
+++ b/packages/shop/package.json
@@ -8,6 +8,9 @@
     "build": "gatsby build",
     "develop": "gatsby develop -p 8001"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@lerna-monorepo/shared-ui": "^1.0.1",
     "dotenv": "^8.0.0",
