chore: change scoped package name
BREAKING CHANGE: We have a new scoped package name, duh

--- a/packages/shop/package.json
+++ b/packages/shop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lerna-monorepo/shop",
+  "name": "@lerna-monorepo-jakey/shop",
   "version": "0.0.2",
   "license": "MIT",
   "scripts": {
