--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lerna-monorepo/blog",
+  "name": "@lerna-monorepo-jakey/blog",
   "version": "0.0.2",
   "main": "index.js",
   "license": "MIT",
